<resources>
    <string name="app_name">Coogo</string>
    <string name="menu_main">首页</string>
    <string name="menu_circle">达人</string>
    <string name="menu_msg">消息</string>
    <string name="menu_my">我的</string>
    <string name="menu_handpick">精选</string>
    <string name="menu_category">分类</string>
    <string name="menu_shopbag">购物袋</string>
    <string name="title_name">机上免税2.0</string>
    <string name="hot">热门推荐</string>
    <string name="brand">品牌盛会</string>
    <string name="man">男士特供</string>
    <string name="women">女士特供</string>
    <string name="focus">关注</string>
    <string name="search">搜索</string>
    <string name="search_content">惊喜多多,搜搜看</string>
    <string name="search_empty">没有找到商品，试试输入别的信息</string>
    <string name="share">分享</string>
    <string name="discover">发现</string>
    <string name="handpickBanner">精选</string>
    <string name="like">喜欢</string>
    <string name="predetemine">预定</string>
    <string name="ll_cancel">取消</string>
    <string name="ll_enter">确定</string>
    <string name="dialog_hint">确定</string>
    <string name="more">更多</string>
    <string name="special_place">专场</string>
    <string name="plan">计划</string>
    <string name="delete">删除</string>
    <string name="brand_from">来自品牌:</string>
    <string name="loading_text">努力加载中...</string>
    <string name="load_all">所有数据已经加载完毕</string>
    <string name="use_help">使用须知</string>
    <string name="quit_alert">再按一次退出程序</string>
    <string name="request_error">网络连接异常请稍候再试</string>
    <string name="common_domestic">国内</string>
    <string name="common_international">国际</string>
    <string name="chose_start">选择出发</string>
    <string name="chose_end">选择到达</string>
    <string name="check_airport">航班查询</string>
    <string name="add_airport">添加行程</string>
    <string name="chose_airport">选择航班</string>
    <string name="edit_airport">请输入航班号</string>
    <string name="chose_date">请选择今天以后的日期</string>
    <string name="no_airport">对不起,没有查到该航班的信息。</string>
    <string name="please_chose_date">请选择日期</string>
    <string name="my_schedule">我的预定</string>
    <string name="schedule_done">已完成</string>
    <string name="schedule_ing">进行中</string>
    <string name="schedule_order">订单号:</string>
    <string name="schedule_you">您预订了</string>
    <string name="schedule_product">航班的商品</string>
    <string name="schedule_airport_cancel">航班取消</string>
    <string name="schedule_remind">请先勾选您要删除的预定订单</string>
    <string name="schedule_detail_you">您于</string>
    <string name="schedule_detail_schedule">预订了</string>
    <string name="schedule_detail_de">的</string>
    <string name="schedule_detail_airport">航班的商品:</string>
    <string name="schedule_detail_predater">预定</string>
    <string name="schedule_detail_config">配货中</string>
    <string name="schedule_detail_pick">提货</string>
    <string name="schedule_start_time">起飞日期:</string>
    <string name="schedule_detail_total_price">商品总额:</string>
    <string name="schedule_detail_coupon_price">-优惠:</string>
    <string name="schedule_detail_final_price">实付:</string>
    <string name="my_order">我的订单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_invite">邀请好友，一起来赚钱</string>
    <string name="my_invite2">邀请1人奖励￥50</string>
    <string name="my_welfare">福利</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_hotline">客服电话</string>
    <string name="my_hotline_num">6296 6666</string>
    <string name="my_help">帮助中心</string>
    <string name="price_preferent">线上特惠</string>
    <string name="price_online">线上价格</string>
    <string name="price_airport">机上价格</string>
    <string name="price_market">市价参考</string>
    <string name="schedule_now">现在预定</string>
    <string name="title_right_save">保存</string>
    <string name="title_right_delete">删除</string>
    <string name="product_title">商品详情</string>
    <string name="product_add_car">加入购物车</string>
    <string name="product_buy_now">立即预定</string>
    <string name="product_brand_desc">品牌介绍</string>
    <string name="product_good_desc">商品介绍</string>
    <string name="product_good_info">商品规格</string>
    <string name="product_price">价格指向标</string>
    <string name="product_buy_introduce">购买说明</string>
    <string name="product_txt_introduce">本应用所提供之商品和服务全部由库拉索提供
经中华人民共和国国务院特批的，正牌保证，品质无忧
购买前请仔细阅读“购买须知”。
&#x000D;库拉索全称是：库拉索外交供应有限公司（Diplomatic Supplies N.V.），成立于1994年，运营总部设于香港。是世界知名的机上免税品服务提供商。经中华人民共和国国务院特批，库拉索于1995年开始同中国国际航空公司合作开展经营国行机上免税业务。每年为逾三千万国际旅客提供优质的免税商品以及贴心的机上消费体验</string>
    <string name="product_buy_flow">购买流程</string>
    <string name="product_step1">立即预定或加入购物车</string>
    <string name="product_step2">填好个人、航班信息</string>
    <string name="product_step3">跟踪订单状态、查看以往订单</string>
    <string name="product_step4">登机后完成支付(美金或多币种信用卡)、收取商品</string>
    <string name="product_service">售后服务</string>
    <string name="product_txt_service">如果您购买的免税品出现瑕疵：请您在购买商品之日起30日内，拨打售后服务热线。供货商将竭诚为您提供维修或更换服务。请保留好收据、商品的完整内外包装、配件、说明书、保修单等各种组件。因滥用、误用、意外或改装而导致损坏的情况不在售后服务范畴内；同时，化妆品、食品、研究等直接关系人体健康的商品，已经使用则不再享受对应的售后服务。
&#x000A;&#x000A;&#x000D;售后服务热线:010-56936846。</string>
    <string name="airport_info">请填写航班信息</string>
    <string name="people_info">请填写乘机人信息</string>
    <string name="people">乘机人信息</string>
    <string name="people_name">请填写乘机人姓名</string>
    <string name="people_phone">请填写乘机人手机号码</string>
    <string name="must">*这是必填的哦</string>
    <string name="airport_num_hint">请输入航班号</string>
    <string name="airport_company">请选择航空公司</string>
    <string name="add_shopcar_first">请先添加商品到购物袋</string>
    <string name="shopcar_submit">提交订单</string>
    <string name="submit">提交</string>
    <string name="shopcar_title">购物袋</string>
    <string name="add_shopcar">加入购物袋</string>
    <string name="order_now">立即下单</string>
    <string name="goods_more">点击查看更多</string>
    <string name="shopcar_add_airline">添加行程</string>
    <string name="shopcar_air_person">乘机人</string>
    <string name="shopcar_must_wirte">*这是必填的哦</string>
    <string name="disclaimer">用户协议</string>
    <string name="customs_rules">购买须知</string>
    <string name="check_disclaimer">请同意用户协议</string>
    <string name="check_rules">请同意购买须知</string>
    <string name="disclaimer_link">http://www.aerotq.com/dfg/userp.html</string>
    <string name="rules_link">http://www.aerotq.com/dfg/purchnote.html</string>
    <string name="account_me">我的账户</string>
    <string name="account_phone">手机</string>
    <string name="account_weixin">微信</string>
    <string name="account_non_bound">未绑定</string>
    <string name="account_name">您还没有登录呦~</string>
    <string name="account_schdule">我的预定</string>
    <string name="account_schdule_desc">看看都买了什么吧</string>
    <string name="account_collect">我的收藏</string>
    <string name="account_collect_desc">把喜欢的东西都收藏起来吧</string>
    <string name="account_help">使用帮助</string>
    <string name="account_help_desc">越来越熟悉了呦</string>
    <string name="account_about">关于我们</string>
    <string name="account_service">联系客服</string>
    <string name="account_exit">退出登录</string>
    <string name="account_about_desc">了解更多关于免税达人的信息</string>
    <string name="account_coupons">我的优惠券</string>
    <string name="coupons">优惠券</string>
    <string name="goods_brand">品牌</string>
    <string name="goods_category">分类</string>
    <string name="couponse_can_use">可使用</string>
    <string name="couponse_has_used">已使用</string>
    <string name="couponse_has_expired">已过期</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="oauth_start">授权开始</string>
    <string name="oauth_complete">授权完成</string>
    <string name="oauth_fail">授权失败</string>
    <string name="oauth_error">授权错误</string>
    <string name="oauth_cancel">授权取消</string>
    <string name="cancel_oauth_success">取消授权成功</string>
    <string name="cancel_oauth_fail" translatable="false">取消授权失败</string>
    <string name="login_not">您尚未登录</string>
    <string name="login">登录</string>
    <string name="about_version">机上免税2.0</string>
    <string name="about_desc">为您提供更新更快捷的免税品预定方式\n随时随地，手机预定，美好旅途第一步</string>
    <string name="about_ping">小主,给个好评把！</string>
    <string name="market_info">获取应用市场信息失败</string>
    <string name="share_weixin" translatable="false">分享至微信好友</string>
    <string name="share_friends" translatable="false">分享至朋友圈</string>
    <string name="share_sina" translatable="false">分享至新浪微博</string>
    <string name="add_air_info">添加航班信息</string>
    <string name="air_info1">是否修改信息</string>
    <string name="app_name_test">DutyFreeTest</string>
    <string name="brand_desc">国务院特批的供应商,品牌荟萃,100%正品保正!</string>
    <string name="brand_title">名品荟萃,正品保障</string>
    <string name="change_person_info">是否修改信息</string>
    <string name="chose_delete_goods">请选择要删除的商品</string>
    <string name="product_status">商品状态 :</string>
    <string name="air_info2">晚了一步哦，此航班配货已经结束！</string>
    <string name="product_info">商品信息</string>
    <string name="title_activity_scale_anim_test">ScaleAnimTest</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="full_minus">以下商品购满金额,即可享受满减</string>
    <string name="choice_coupon">请选择优惠券</string>
    <string name="price_totle">合计:</string>
    <string name="price_coupon">(优惠扣减)</string>
    <string name="no_coupon">不使用优惠券</string>
    <string name="coupons_unused">未使用</string>
    <string name="coupons_used">已使用</string>
    <string name="coupons_outdate">已过期</string>
    <string name="time_format_full">时间：yyyy年MM月dd日  HH:mm</string>
    <string name="time_format_year">yyyy/MM/dd</string>
    <string name="time_format_month">MM月dd日</string>
    <string name="time_format_date">MM月dd日</string>
    <string name="time_format_pre_day">前天HH:mm</string>
    <string name="time_format_yesterday">昨天HH:mm</string>
    <string name="time_format_today">今天HH:mm</string>
    <string name="bargain">找人砍价</string>
    <string name="is_buy">您已购买此商品</string>
    <string name="bargain_fail">发起砍价失败,请重新发起</string>
    <string name="login_app_desc">飞买BOOK</string>
    <string name="login_account_hint">请输入工号/手机号</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_account_error">手机号码输入错误</string>
    <string name="login_password_error">密码输入错误</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="login_other">使用其他方式登录</string>
    <string name="login_copyright">Copyright©2004-2015 AERO-COM Inc.</string>
    <string name="find_password_authcode_hint">请输入验证码</string>
    <string name="find_password_get_authcode">获取验证码</string>
    <string name="phone_verify_hint">请输入手机号</string>
    <string name="register_airport_company">所属航空公司</string>
    <string name="register_choise">选择</string>
    <string name="welcome_to_us">欢迎加入</string>
    <string name="register_next_step">下一步</string>
    <string name="register_agreement">注册代表并同意《Coogo用户协议》</string>
    <string name="register_invitation">如果您是受邀用户,请输入朋友发给您的邀请码</string>
    <string name="register_invitation_code_hint">请输入邀请码</string>
    <string name="register_invitation_code">什么是邀请码？</string>
    <string name="goods_promise_title">免税达人承诺</string>
    <string name="goods_promise_zheng">正品保证</string>
    <string name="goods_promise_renzheng">国家认证</string>
    <string name="goods_promise_tranport">专业配送</string>
    <string name="goods_promise_pay">便捷支付</string>
    <string name="goods_brand_desc">品牌介绍</string>
    <string name="goods_good_desc">商品介绍</string>
    <string name="goods_good_info">商品规格</string>
    <string name="goods_price">价格指向标</string>
    <string name="goods_status_0">商品状态:预购中</string>
</resources>