<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@mipmap/goods_detail_price"
        android:drawablePadding="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/goods_price"/>
    <LinearLayout
        android:id="@+id/goods_good_price_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"></LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@mipmap/goods_detail_introduce"
        android:drawablePadding="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/goods_good_desc"/>
    <TextView
        android:id="@+id/goods_good_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:lineSpacingExtra="3dp"
        android:textSize="12sp"
        android:text="@string/goods_good_desc"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@mipmap/goods_detail_good_standard"
        android:drawablePadding="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/goods_good_info"/>
    <LinearLayout
        android:id="@+id/goods_good_standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"></LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@mipmap/goods_detail_brand_desc"
        android:drawablePadding="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/goods_brand_desc"/>
    <TextView
        android:id="@+id/goods_brand_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:lineSpacingExtra="3dp"
        android:textSize="12sp"
        android:text="@string/goods_good_desc"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>
    <TextView
        android:id="@+id/goods_good_tatus"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@mipmap/goods_detail_good_status"
        android:drawablePadding="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/goods_status_0"/>

</LinearLayout>